Dense JavaDoc & method call formatting; reformatting all the sources