@@ -117,17 +117,17 @@ public class MoreCollectorsTest {
     @Test
     public void testMaxAll() {
         List<String> input = Arrays.asList("a", "bb", "c", "", "cc", "eee", "bb", "ddd");
-        checkCollector("maxAll", Arrays.asList("eee", "ddd"), input::stream,
-            MoreCollectors.maxAll(Comparator.comparingInt(String::length)));
+        checkCollector("maxAll", Arrays.asList("eee", "ddd"), input::stream, MoreCollectors.maxAll(Comparator
+                .comparingInt(String::length)));
         Collector<String, ?, String> maxAllJoin = MoreCollectors.maxAll(Comparator.comparingInt(String::length),
             Collectors.joining(","));
         checkCollector("maxAllJoin", "eee,ddd", input::stream, maxAllJoin);
-        checkCollector("minAll", 1L, input::stream,
-            MoreCollectors.minAll(Comparator.comparingInt(String::length), Collectors.counting()));
-        checkCollector("minAllEmpty", Arrays.asList(""), input::stream,
-            MoreCollectors.minAll(Comparator.comparingInt(String::length)));
-        checkCollectorEmpty("maxAll", Collections.emptyList(),
-            MoreCollectors.maxAll(Comparator.comparingInt(String::length)));
+        checkCollector("minAll", 1L, input::stream, MoreCollectors.minAll(Comparator.comparingInt(String::length),
+            Collectors.counting()));
+        checkCollector("minAllEmpty", Arrays.asList(""), input::stream, MoreCollectors.minAll(Comparator
+                .comparingInt(String::length)));
+        checkCollectorEmpty("maxAll", Collections.emptyList(), MoreCollectors.maxAll(Comparator
+                .comparingInt(String::length)));
         checkCollectorEmpty("maxAllJoin", "", maxAllJoin);
 
         List<Integer> ints = IntStreamEx.of(new Random(1), 10000, 1, 1000).boxed().toList();
@@ -175,10 +175,10 @@ public class MoreCollectorsTest {
     public void testFirstLast() {
         Supplier<Stream<Integer>> s = () -> IntStreamEx.range(1000).boxed();
         checkShortCircuitCollector("first", Optional.of(0), 1, s, MoreCollectors.first());
-        checkShortCircuitCollector("firstLong", Optional.of(0), 1,
-            () -> Stream.of(1).flatMap(x -> IntStream.range(0, 1000000000).boxed()), MoreCollectors.first(), true);
-        checkShortCircuitCollector("first", Optional.of(1), 1, () -> Stream.iterate(1, x -> x + 1),
-            MoreCollectors.first(), true);
+        checkShortCircuitCollector("firstLong", Optional.of(0), 1, () -> Stream.of(1).flatMap(
+            x -> IntStream.range(0, 1000000000).boxed()), MoreCollectors.first(), true);
+        checkShortCircuitCollector("first", Optional.of(1), 1, () -> Stream.iterate(1, x -> x + 1), MoreCollectors
+                .first(), true);
         assertEquals(1, (int) StreamEx.iterate(1, x -> x + 1).parallel().collect(MoreCollectors.first()).get());
 
         checkCollector("last", Optional.of(999), s, MoreCollectors.last());
@@ -191,8 +191,8 @@ public class MoreCollectorsTest {
         List<Integer> expected = IntStreamEx.range(0, 2000, 2).boxed().toList();
         List<Integer> expectedShort = Arrays.asList(0, 1);
         for (int i = 0; i < 1000; i++) {
-            assertEquals("#" + i, expectedShort,
-                IntStreamEx.range(1000).boxed().parallel().collect(MoreCollectors.head(2)));
+            assertEquals("#" + i, expectedShort, IntStreamEx.range(1000).boxed().parallel().collect(
+                MoreCollectors.head(2)));
             assertEquals("#" + i, expected, IntStreamEx.range(10000).boxed().parallel().filter(x -> x % 2 == 0)
                     .collect(MoreCollectors.head(1000)));
         }
@@ -220,7 +220,7 @@ public class MoreCollectorsTest {
 
         checkShortCircuitCollector("head(10000)", IntStreamEx.rangeClosed(1, 10000).boxed().toList(), 10000,
             () -> Stream.iterate(1, x -> x + 1), MoreCollectors.head(10000), true);
-        
+
         for (int size : new int[] { 1, 10, 20, 40, 60, 80, 90, 98, 99, 100 }) {
             checkShortCircuitCollector("head-unordered-" + size, Collections.nCopies(size, "test"), size,
                 () -> StreamEx.constant("test", 100), MoreCollectors.head(size));
@@ -287,16 +287,16 @@ public class MoreCollectorsTest {
         expected.put(TimeUnit.SECONDS, 1L);
         expected.put(TimeUnit.DAYS, 2L);
         expected.put(TimeUnit.NANOSECONDS, 1L);
-        checkCollector("groupingByEnum", expected,
-            () -> Stream.of(TimeUnit.SECONDS, TimeUnit.DAYS, TimeUnit.DAYS, TimeUnit.NANOSECONDS),
-            MoreCollectors.groupingByEnum(TimeUnit.class, Function.identity(), Collectors.counting()));
+        checkCollector("groupingByEnum", expected, () -> Stream.of(TimeUnit.SECONDS, TimeUnit.DAYS, TimeUnit.DAYS,
+            TimeUnit.NANOSECONDS), MoreCollectors.groupingByEnum(TimeUnit.class, Function.identity(), Collectors
+                .counting()));
     }
 
     @Test(expected = IllegalStateException.class)
     public void testGroupingByWithDomainException() {
         List<Integer> list = Arrays.asList(1, 2, 20, 3, 31, 4);
-        Collector<Integer, ?, Map<Integer, List<Integer>>> c = MoreCollectors.groupingBy(i -> i % 10,
-            StreamEx.of(0, 1, 2, 3).toSet(), Collectors.toList());
+        Collector<Integer, ?, Map<Integer, List<Integer>>> c = MoreCollectors.groupingBy(i -> i % 10, StreamEx.of(0, 1,
+            2, 3).toSet(), Collectors.toList());
         Map<Integer, List<Integer>> map = list.stream().collect(c);
         System.out.println(map);
     }
@@ -323,20 +323,21 @@ public class MoreCollectorsTest {
         name2sex.put("Ruth", "Girl");
         name2sex.put("Melanie", "Girl");
         Collector<Entry<String, String>, ?, Map<String, List<String>>> groupingBy = MoreCollectors.groupingBy(
-            Entry::getValue, StreamEx.of("Girl", "Boy").toSet(),
-            MoreCollectors.mapping(Entry::getKey, MoreCollectors.head(2)));
+            Entry::getValue, StreamEx.of("Girl", "Boy").toSet(), MoreCollectors.mapping(Entry::getKey, MoreCollectors
+                    .head(2)));
         AtomicInteger counter = new AtomicInteger();
-        Map<String, List<String>> map = EntryStream.of(name2sex).peek(c -> counter.incrementAndGet())
-                .collect(groupingBy);
+        Map<String, List<String>> map = EntryStream.of(name2sex).peek(c -> counter.incrementAndGet()).collect(
+            groupingBy);
         assertEquals(Arrays.asList("Mary", "Lucie"), map.get("Girl"));
         assertEquals(Arrays.asList("John", "James"), map.get("Boy"));
         assertEquals(4, counter.get());
 
         Collector<Entry<String, String>, ?, Map<String, String>> groupingByJoin = MoreCollectors.groupingBy(
-            Entry::getValue, StreamEx.of("Girl", "Boy").toSet(),
-            MoreCollectors.mapping(Entry::getKey, Joining.with(", ").maxChars(16).cutAfterDelimiter()));
+            Entry::getValue, StreamEx.of("Girl", "Boy").toSet(), MoreCollectors.mapping(Entry::getKey, Joining.with(
+                ", ").maxChars(16).cutAfterDelimiter()));
         counter.set(0);
-        Map<String, String> mapJoin = EntryStream.of(name2sex).peek(c -> counter.incrementAndGet()).collect(groupingByJoin);
+        Map<String, String> mapJoin = EntryStream.of(name2sex).peek(c -> counter.incrementAndGet()).collect(
+            groupingByJoin);
         assertEquals("Mary, Lucie, ...", mapJoin.get("Girl"));
         assertEquals("John, James, ...", mapJoin.get("Boy"));
         assertEquals(7, counter.get());
@@ -348,8 +349,8 @@ public class MoreCollectorsTest {
         boolean[] expected = new boolean[input.size()];
         for (int i = 0; i < expected.length; i++)
             expected[i] = input.get(i) > 50;
-        streamEx(input::stream,
-            supplier -> assertArrayEquals(expected, supplier.get().collect(MoreCollectors.toBooleanArray(x -> x > 50))));
+        streamEx(input::stream, supplier -> assertArrayEquals(expected, supplier.get().collect(
+            MoreCollectors.toBooleanArray(x -> x > 50))));
     }
 
     @Test
@@ -367,8 +368,8 @@ public class MoreCollectorsTest {
     public void testMapping() {
         List<String> input = Arrays.asList("Capital", "lower", "Foo", "bar");
         Collector<String, ?, Map<Boolean, Optional<Integer>>> collector = MoreCollectors
-                .partitioningBy(str -> Character.isUpperCase(str.charAt(0)),
-                    MoreCollectors.mapping(String::length, MoreCollectors.first()));
+                .partitioningBy(str -> Character.isUpperCase(str.charAt(0)), MoreCollectors.mapping(String::length,
+                    MoreCollectors.first()));
         checkShortCircuitCollector("mapping", new BooleanMap<>(Optional.of(7), Optional.of(5)), 2, input::stream,
             collector);
         Collector<String, ?, Map<Boolean, Optional<Integer>>> collectorLast = MoreCollectors.partitioningBy(
@@ -397,11 +398,11 @@ public class MoreCollectorsTest {
                 Arrays.asList("ee", "dd"), Arrays.asList("aa", "bb", "dd"));
             checkShortCircuitCollector("#" + i, Collections.emptySet(), 3, input::stream, MoreCollectors.intersecting());
             List<List<Integer>> copies = new ArrayList<>(Collections.nCopies(100, Arrays.asList(1, 2)));
-            checkShortCircuitCollector("#" + i, StreamEx.of(1, 2).toSet(), 100, copies::stream,
-                MoreCollectors.intersecting());
+            checkShortCircuitCollector("#" + i, StreamEx.of(1, 2).toSet(), 100, copies::stream, MoreCollectors
+                    .intersecting());
             copies.addAll(Collections.nCopies(100, Arrays.asList(3)));
-            checkShortCircuitCollector("#" + i, Collections.emptySet(), 101, copies::stream,
-                MoreCollectors.intersecting());
+            checkShortCircuitCollector("#" + i, Collections.emptySet(), 101, copies::stream, MoreCollectors
+                    .intersecting());
             checkCollectorEmpty("#" + i, Collections.emptySet(), MoreCollectors.intersecting());
         }
     }
@@ -415,8 +416,8 @@ public class MoreCollectorsTest {
         assertEquals(OptionalInt.of(0), IntStreamEx.iterate(16384, i -> i + 1).parallel().boxed().collect(collector));
         assertEquals(OptionalInt.of(16384), IntStreamEx.iterate(16384, i -> i + 1).parallel().limit(16383).boxed()
                 .collect(collector));
-        Collector<Integer, ?, Integer> unwrapped = MoreCollectors.collectingAndThen(
-            MoreCollectors.andingInt(Integer::intValue), OptionalInt::getAsInt);
+        Collector<Integer, ?, Integer> unwrapped = MoreCollectors.collectingAndThen(MoreCollectors
+                .andingInt(Integer::intValue), OptionalInt::getAsInt);
         assertTrue(unwrapped.characteristics().contains(Characteristics.UNORDERED));
         checkShortCircuitCollector("andIntUnwrapped", 0, 4, ints::stream, unwrapped);
         checkShortCircuitCollector("andIntUnwrapped", 0, 2, Arrays.asList(0x1, 0x10, 0x100)::stream, unwrapped);
@@ -425,29 +426,28 @@ public class MoreCollectorsTest {
     @Test
     public void testAndLong() {
         List<Long> longs = Arrays.asList(0xFFFFFFFFFFFFFFFFL, 0xFFFFFFFF00000000L, 0xFFFFFFFF0000L);
-        checkShortCircuitCollector("andLong", OptionalLong.of(0xFFFF00000000L), 3, longs::stream,
-            MoreCollectors.andingLong(Long::longValue));
+        checkShortCircuitCollector("andLong", OptionalLong.of(0xFFFF00000000L), 3, longs::stream, MoreCollectors
+                .andingLong(Long::longValue));
         longs = Arrays.asList(1L, 2L, 3L, 4L);
-        checkShortCircuitCollector("andLong", OptionalLong.of(0), 2, longs::stream,
-            MoreCollectors.andingLong(Long::longValue));
+        checkShortCircuitCollector("andLong", OptionalLong.of(0), 2, longs::stream, MoreCollectors
+                .andingLong(Long::longValue));
         checkCollectorEmpty("andLongEmpty", OptionalLong.empty(), MoreCollectors.andingLong(Long::longValue));
     }
 
     @Test
     public void testAndLongFlatMap() {
-        checkShortCircuitCollector("andLongFlat", OptionalLong.of(0), 2,
-            () -> LongStreamEx.of(0).flatMap(x -> LongStream.range(1, 100000000)).boxed(),
-            MoreCollectors.andingLong(Long::longValue), true);
+        checkShortCircuitCollector("andLongFlat", OptionalLong.of(0), 2, () -> LongStreamEx.of(0).flatMap(
+            x -> LongStream.range(1, 100000000)).boxed(), MoreCollectors.andingLong(Long::longValue), true);
     }
 
     @Test
     public void testFiltering() {
-        Collector<Integer, ?, Optional<Integer>> firstEven = MoreCollectors.filtering(x -> x % 2 == 0,
-            MoreCollectors.first());
-        Collector<Integer, ?, Optional<Integer>> firstOdd = MoreCollectors.filtering(x -> x % 2 != 0,
-            MoreCollectors.first());
-        Collector<Integer, ?, Integer> sumOddEven = MoreCollectors.pairing(firstEven, firstOdd,
-            (e, o) -> e.get() + o.get());
+        Collector<Integer, ?, Optional<Integer>> firstEven = MoreCollectors.filtering(x -> x % 2 == 0, MoreCollectors
+                .first());
+        Collector<Integer, ?, Optional<Integer>> firstOdd = MoreCollectors.filtering(x -> x % 2 != 0, MoreCollectors
+                .first());
+        Collector<Integer, ?, Integer> sumOddEven = MoreCollectors.pairing(firstEven, firstOdd, (e, o) -> e.get()
+            + o.get());
         List<Integer> ints = Arrays.asList(1, 3, 5, 7, 9, 10, 8, 6, 4, 2, 3, 7, 11);
         checkShortCircuitCollector("sumOddEven", 11, 6, ints::stream, sumOddEven);
         Collector<Integer, ?, Long> countEven = MoreCollectors.filtering(x -> x % 2 == 0, Collectors.counting());
@@ -460,8 +460,8 @@ public class MoreCollectorsTest {
         checkShortCircuitCollector("One", Optional.empty(), 2, ints::stream, MoreCollectors.onlyOne());
         checkShortCircuitCollector("FilterSeveral", Optional.empty(), 2, () -> ints.stream().filter(x -> x % 20 == 0),
             MoreCollectors.onlyOne());
-        checkShortCircuitCollector("FilterSeveral2", Optional.empty(), 40, ints::stream,
-            MoreCollectors.filtering(x -> x % 20 == 0, MoreCollectors.onlyOne()));
+        checkShortCircuitCollector("FilterSeveral2", Optional.empty(), 40, ints::stream, MoreCollectors.filtering(
+            x -> x % 20 == 0, MoreCollectors.onlyOne()));
         checkShortCircuitCollector("FilterOne", Optional.of(60), 1, () -> ints.stream().filter(x -> x % 60 == 0),
             MoreCollectors.onlyOne());
         checkShortCircuitCollector("FilterNone", Optional.empty(), 0, () -> ints.stream().filter(x -> x % 110 == 0),
@@ -477,16 +477,16 @@ public class MoreCollectorsTest {
         enumValues = IntStreamEx.range(100).map(x -> x % (vals.length - 1)).elements(vals).toList();
         EnumSet<TimeUnit> expected = EnumSet.allOf(TimeUnit.class);
         expected.remove(vals[vals.length - 1]);
-        checkShortCircuitCollector("toEnumSet", expected, 100, enumValues::stream,
-            MoreCollectors.toEnumSet(TimeUnit.class));
+        checkShortCircuitCollector("toEnumSet", expected, 100, enumValues::stream, MoreCollectors
+                .toEnumSet(TimeUnit.class));
         checkCollectorEmpty("Empty", EnumSet.noneOf(TimeUnit.class), MoreCollectors.toEnumSet(TimeUnit.class));
     }
 
     @Test
     public void testFlatMapping() {
         {
-            Map<Integer, List<Integer>> expected = IntStreamEx.rangeClosed(1, 100).boxed()
-                    .toMap(x -> IntStreamEx.rangeClosed(1, x).boxed().toList());
+            Map<Integer, List<Integer>> expected = IntStreamEx.rangeClosed(1, 100).boxed().toMap(
+                x -> IntStreamEx.rangeClosed(1, x).boxed().toList());
             Collector<Integer, ?, Map<Integer, List<Integer>>> groupingBy = Collectors.groupingBy(Function.identity(),
                 MoreCollectors.flatMapping(x -> IntStream.rangeClosed(1, x).boxed(), Collectors.toList()));
             checkCollector("flatMappingSimple", expected, () -> IntStreamEx.rangeClosed(1, 100).boxed(), groupingBy);
@@ -494,40 +494,43 @@ public class MoreCollectorsTest {
 
         Function<Entry<String, List<String>>, Stream<String>> valuesStream = e -> e.getValue() == null ? null : e
                 .getValue().stream();
-        List<Entry<String, List<String>>> list = EntryStream
-                .of("a", Arrays.asList("bb", "cc", "dd"), "b", Arrays.asList("ee", "ff"), "c", null)
-                .append("c", Arrays.asList("gg"), "b", null, "a", Arrays.asList("hh")).toList();
+        List<Entry<String, List<String>>> list = EntryStream.of("a", Arrays.asList("bb", "cc", "dd"), "b",
+            Arrays.asList("ee", "ff"), "c", null).append("c", Arrays.asList("gg"), "b", null, "a", Arrays.asList("hh"))
+                .toList();
         {
-            Map<String, List<String>> expected = EntryStream.of(list.stream())
-                    .flatMapValues(l -> l == null ? null : l.stream()).grouping();
-            checkCollector("flatMappingCombine", expected, list::stream,
-                Collectors.groupingBy(Entry::getKey, MoreCollectors.flatMapping(valuesStream, Collectors.toList())));
+            Map<String, List<String>> expected = EntryStream.of(list.stream()).flatMapValues(
+                l -> l == null ? null : l.stream()).grouping();
+            checkCollector("flatMappingCombine", expected, list::stream, Collectors.groupingBy(Entry::getKey,
+                MoreCollectors.flatMapping(valuesStream, Collectors.toList())));
             AtomicInteger openClose = new AtomicInteger();
-            Collector<Entry<String, List<String>>, ?, Map<String, List<String>>> groupingBy = Collectors.groupingBy(Entry::getKey, MoreCollectors.flatMapping(valuesStream.andThen(s -> {
-                if(s == null) return null;
-                openClose.incrementAndGet();
-                return s.onClose(openClose::decrementAndGet);
-            }), Collectors.toList()));
-            checkCollector("flatMappingCombineClosed", expected, list::stream,
-                MoreCollectors.collectingAndThen(groupingBy, res -> {
+            Collector<Entry<String, List<String>>, ?, Map<String, List<String>>> groupingBy = Collectors.groupingBy(
+                Entry::getKey, MoreCollectors.flatMapping(valuesStream.andThen(s -> {
+                    if (s == null)
+                        return null;
+                    openClose.incrementAndGet();
+                    return s.onClose(openClose::decrementAndGet);
+                }), Collectors.toList()));
+            checkCollector("flatMappingCombineClosed", expected, list::stream, MoreCollectors.collectingAndThen(
+                groupingBy, res -> {
                     assertEquals(0, openClose.get());
                     return res;
                 }));
             boolean catched = false;
             try {
-                Collector<Entry<String, List<String>>, ?, Map<String, List<String>>> groupingByException = Collectors.groupingBy(Entry::getKey, MoreCollectors.flatMapping(valuesStream.andThen(s -> {
-                    if(s == null) return null;
-                    openClose.incrementAndGet();
-                    return s.onClose(openClose::decrementAndGet).peek(e -> {
-                        if(e.equals("gg"))
-                            throw new IllegalArgumentException(e);
-                    });
-                }), Collectors.toList()));
-                list.stream().collect(
-                    MoreCollectors.collectingAndThen(groupingByException, res -> {
-                        assertEquals(0, openClose.get());
-                        return res;
-                    }));
+                Collector<Entry<String, List<String>>, ?, Map<String, List<String>>> groupingByException = Collectors
+                        .groupingBy(Entry::getKey, MoreCollectors.flatMapping(valuesStream.andThen(s -> {
+                            if (s == null)
+                                return null;
+                            openClose.incrementAndGet();
+                            return s.onClose(openClose::decrementAndGet).peek(e -> {
+                                if (e.equals("gg"))
+                                    throw new IllegalArgumentException(e);
+                            });
+                        }), Collectors.toList()));
+                list.stream().collect(MoreCollectors.collectingAndThen(groupingByException, res -> {
+                    assertEquals(0, openClose.get());
+                    return res;
+                }));
             } catch (IllegalArgumentException e1) {
                 assertEquals("gg", e1.getMessage());
                 catched = true;
@@ -540,42 +543,41 @@ public class MoreCollectorsTest {
             Collector<Entry<String, List<String>>, ?, List<String>> headOne = MoreCollectors.flatMapping(valuesStream,
                 MoreCollectors.head(1));
             checkCollector("flatMappingSubShort", expected, list::stream, Collectors.groupingBy(Entry::getKey, headOne));
-            checkShortCircuitCollector("flatMappingShort", expected, 4, list::stream,
-                MoreCollectors.groupingBy(Entry::getKey, StreamEx.of("a", "b", "c").toSet(), headOne));
+            checkShortCircuitCollector("flatMappingShort", expected, 4, list::stream, MoreCollectors.groupingBy(
+                Entry::getKey, StreamEx.of("a", "b", "c").toSet(), headOne));
             AtomicInteger cnt = new AtomicInteger();
-            Collector<Entry<String, List<String>>, ?, List<String>> headPeek = MoreCollectors.flatMapping(
-                valuesStream.andThen(s -> s == null ? null : s.peek(x -> cnt.incrementAndGet())), MoreCollectors.head(1));
+            Collector<Entry<String, List<String>>, ?, List<String>> headPeek = MoreCollectors.flatMapping(valuesStream
+                    .andThen(s -> s == null ? null : s.peek(x -> cnt.incrementAndGet())), MoreCollectors.head(1));
             assertEquals(expected, StreamEx.of(list).collect(Collectors.groupingBy(Entry::getKey, headPeek)));
             assertEquals(3, cnt.get());
             cnt.set(0);
-            assertEquals(
-                expected,
-                StreamEx.of(list).collect(
-                    MoreCollectors.groupingBy(Entry::getKey, StreamEx.of("a", "b", "c").toSet(), headPeek)));
+            assertEquals(expected, StreamEx.of(list).collect(
+                MoreCollectors.groupingBy(Entry::getKey, StreamEx.of("a", "b", "c").toSet(), headPeek)));
             assertEquals(3, cnt.get());
         }
         {
-            Map<String, List<String>> expected = EntryStream.of("a", Arrays.asList("bb", "cc"), "b", Arrays.asList("ee", "ff"),
-                "c", Arrays.asList("gg")).toMap();
+            Map<String, List<String>> expected = EntryStream.of("a", Arrays.asList("bb", "cc"), "b",
+                Arrays.asList("ee", "ff"), "c", Arrays.asList("gg")).toMap();
             Collector<Entry<String, List<String>>, ?, List<String>> headTwo = MoreCollectors.flatMapping(valuesStream,
                 MoreCollectors.head(2));
             checkCollector("flatMappingSubShort", expected, list::stream, Collectors.groupingBy(Entry::getKey, headTwo));
             AtomicInteger openClose = new AtomicInteger();
             boolean catched = false;
             try {
-                Collector<Entry<String, List<String>>, ?, Map<String, List<String>>> groupingByException = Collectors.groupingBy(Entry::getKey, MoreCollectors.flatMapping(valuesStream.andThen(s -> {
-                    if(s == null) return null;
-                    openClose.incrementAndGet();
-                    return s.onClose(openClose::decrementAndGet).peek(e -> {
-                        if(e.equals("gg"))
-                            throw new IllegalArgumentException(e);
-                    });
-                }), MoreCollectors.head(2)));
-                list.stream().collect(
-                    MoreCollectors.collectingAndThen(groupingByException, res -> {
-                        assertEquals(0, openClose.get());
-                        return res;
-                    }));
+                Collector<Entry<String, List<String>>, ?, Map<String, List<String>>> groupingByException = Collectors
+                        .groupingBy(Entry::getKey, MoreCollectors.flatMapping(valuesStream.andThen(s -> {
+                            if (s == null)
+                                return null;
+                            openClose.incrementAndGet();
+                            return s.onClose(openClose::decrementAndGet).peek(e -> {
+                                if (e.equals("gg"))
+                                    throw new IllegalArgumentException(e);
+                            });
+                        }), MoreCollectors.head(2)));
+                list.stream().collect(MoreCollectors.collectingAndThen(groupingByException, res -> {
+                    assertEquals(0, openClose.get());
+                    return res;
+                }));
             } catch (IllegalArgumentException e1) {
                 assertEquals("gg", e1.getMessage());
                 catched = true;
@@ -583,27 +585,28 @@ public class MoreCollectorsTest {
             assertTrue(catched);
         }
     }
-    
+
     @Test(expected = IllegalStateException.class)
     public void testFlatMappingExceptional() {
         Stream.of(1, 2, 3).collect(MoreCollectors.flatMapping(x -> Stream.of(1, x).onClose(() -> {
-            if(x == 3)
+            if (x == 3)
                 throw new IllegalStateException();
         }), Collectors.toList()));
     }
-    
+
     @Test(expected = IllegalStateException.class)
     public void testFlatMappingShortCircuitExceptional() {
         Stream.of(1, 2, 3).collect(MoreCollectors.flatMapping(x -> Stream.of(1, x).onClose(() -> {
-            if(x == 3)
+            if (x == 3)
                 throw new IllegalStateException();
         }), MoreCollectors.head(10)));
     }
 
     @Test
     public void testFlatMappingExceptionalSuppressed() {
-        List<Collector<Integer, ?, List<Integer>>> downstreams = Arrays.asList(MoreCollectors.head(10), Collectors.toList());
-        for(Collector<Integer, ?, List<Integer>> downstream : downstreams) {
+        List<Collector<Integer, ?, List<Integer>>> downstreams = Arrays.asList(MoreCollectors.head(10), Collectors
+                .toList());
+        for (Collector<Integer, ?, List<Integer>> downstream : downstreams) {
             try {
                 Stream.of(1, 2, 3).collect(MoreCollectors.flatMapping(x -> Stream.of(1, x).peek(y -> {
                     throw new IllegalArgumentException();
@@ -618,13 +621,14 @@ public class MoreCollectorsTest {
             fail("No exception");
         }
     }
-    
+
     @Test
     public void testCommonPrefix() {
         checkCollectorEmpty("prefix", "", MoreCollectors.commonPrefix());
         List<String> input = Arrays.asList("abcdef", "abcdefg", "abcdfgfg", "abcefgh", "abcdfg");
         checkShortCircuitCollector("prefix", "abc", input.size(), input::stream, MoreCollectors.commonPrefix());
-        List<CharSequence> inputSeq = Arrays.asList(new StringBuffer("abcdef"), "abcdefg", "abcdfgfg", "abcefgh", new StringBuilder("abcdfg"));
+        List<CharSequence> inputSeq = Arrays.asList(new StringBuffer("abcdef"), "abcdefg", "abcdfgfg", "abcefgh",
+            new StringBuilder("abcdfg"));
         checkShortCircuitCollector("prefix", "abc", inputSeq.size(), inputSeq::stream, MoreCollectors.commonPrefix());
         List<String> input2 = Arrays.asList("abcdef", "abcdefg", "dabcdfgfg", "abcefgh", "abcdfg");
         checkShortCircuitCollector("prefix", "", 3, input2::stream, MoreCollectors.commonPrefix());
@@ -633,22 +637,23 @@ public class MoreCollectorsTest {
         inputHalf.addAll(Collections.nCopies(1000, "def"));
         checkShortCircuitCollector("prefix", "", 1001, inputHalf::stream, MoreCollectors.commonPrefix());
         List<String> inputSurrogate = Arrays.asList("abc\ud801\udc2f", "abc\ud801\udc2f", "abc\ud801\udc14");
-        checkShortCircuitCollector("prefix", "abc", inputSurrogate.size(), inputSurrogate::stream,
-            MoreCollectors.commonPrefix());
+        checkShortCircuitCollector("prefix", "abc", inputSurrogate.size(), inputSurrogate::stream, MoreCollectors
+                .commonPrefix());
         List<String> inputSurrogateBad = Arrays.asList("abc\ud801x", "abc\ud801y", "abc\ud801z");
         checkShortCircuitCollector("prefix", "abc\ud801", inputSurrogateBad.size(), inputSurrogateBad::stream,
             MoreCollectors.commonPrefix());
         List<String> inputSurrogateMix = Arrays.asList("abc\ud801\udc2f", "abc\ud801x", "abc\ud801\udc14");
-        checkShortCircuitCollector("prefix", "abc", inputSurrogateMix.size(), inputSurrogateMix::stream,
-            MoreCollectors.commonPrefix());
+        checkShortCircuitCollector("prefix", "abc", inputSurrogateMix.size(), inputSurrogateMix::stream, MoreCollectors
+                .commonPrefix());
     }
-    
+
     @Test
     public void testCommonSuffix() {
         checkCollectorEmpty("suffix", "", MoreCollectors.commonSuffix());
         List<String> input = Arrays.asList("defabc", "degfabc", "dfgfgabc", "efghabc", "dfgabc");
         checkShortCircuitCollector("suffix", "abc", input.size(), input::stream, MoreCollectors.commonSuffix());
-        List<CharSequence> inputSeq = Arrays.asList(new StringBuffer("degfabc"), "dfgfgabc", new StringBuilder("efghabc"), "defabc", "dfgabc");
+        List<CharSequence> inputSeq = Arrays.asList(new StringBuffer("degfabc"), "dfgfgabc", new StringBuilder(
+                "efghabc"), "defabc", "dfgabc");
         checkShortCircuitCollector("suffix", "abc", inputSeq.size(), inputSeq::stream, MoreCollectors.commonSuffix());
         List<String> input2 = Arrays.asList("defabc", "defgabc", "dabcdfgfg", "efghabc", "dfgabc");
         checkShortCircuitCollector("suffix", "", 3, input2::stream, MoreCollectors.commonSuffix());
@@ -657,30 +662,29 @@ public class MoreCollectorsTest {
         inputHalf.addAll(Collections.nCopies(1000, "def"));
         checkShortCircuitCollector("suffix", "", 1001, inputHalf::stream, MoreCollectors.commonSuffix());
         List<String> inputSurrogate = Arrays.asList("\ud801\udc2fabc", "\ud802\udc2fabc", "\ud803\udc2fabc");
-        checkShortCircuitCollector("suffix", "abc", inputSurrogate.size(), inputSurrogate::stream,
-            MoreCollectors.commonSuffix());
+        checkShortCircuitCollector("suffix", "abc", inputSurrogate.size(), inputSurrogate::stream, MoreCollectors
+                .commonSuffix());
         List<String> inputSurrogateBad = Arrays.asList("x\udc2fabc", "y\udc2fabc", "z\udc2fabc");
         checkShortCircuitCollector("suffix", "\udc2fabc", inputSurrogateBad.size(), inputSurrogateBad::stream,
             MoreCollectors.commonSuffix());
         List<String> inputSurrogateMix = Arrays.asList("\ud801\udc2fabc", "x\udc2fabc", "\ud801\udc14abc");
-        checkShortCircuitCollector("suffix", "abc", inputSurrogateMix.size(), inputSurrogateMix::stream,
-            MoreCollectors.commonSuffix());
+        checkShortCircuitCollector("suffix", "abc", inputSurrogateMix.size(), inputSurrogateMix::stream, MoreCollectors
+                .commonSuffix());
     }
-    
+
     @Test
     public void testDominators() {
         List<String> input = Arrays
                 .asList("a/", "a/b/c/", "b/c/", "b/d/", "c/a/", "d/a/b/", "c/a/b/", "c/b/", "b/c/d/");
         List<String> expected = Arrays.asList("a/", "b/c/", "b/d/", "c/a/", "c/b/", "d/a/b/");
-        checkCollector("dominators", expected, () -> input.stream().sorted(),
-            MoreCollectors.dominators((a, b) -> b.startsWith(a)));
+        checkCollector("dominators", expected, () -> input.stream().sorted(), MoreCollectors.dominators((a, b) -> b
+                .startsWith(a)));
 
         Random r = new Random(1);
 
-        List<String> longInput = StreamEx
-                .generate(
-                    () -> IntStreamEx.of(r, r.nextInt(10) + 3, 'a', 'z').mapToObj(ch -> (char) ch)
-                            .joining("/", "", "/")).limit(1000).toList();
+        List<String> longInput = StreamEx.generate(
+            () -> IntStreamEx.of(r, r.nextInt(10) + 3, 'a', 'z').mapToObj(ch -> (char) ch).joining("/", "", "/"))
+                .limit(1000).toList();
 
         List<String> tmp = StreamEx.of(longInput).sorted().toList();
         List<String> result = new ArrayList<>();
@@ -697,25 +701,26 @@ public class MoreCollectorsTest {
             } else
                 result.add(curr);
         }
-        checkCollector("dominatorsLong", result, () -> longInput.stream().sorted(),
-            MoreCollectors.dominators((a, b) -> b.startsWith(a)));
+        checkCollector("dominatorsLong", result, () -> longInput.stream().sorted(), MoreCollectors
+                .dominators((a, b) -> b.startsWith(a)));
     }
-    
+
     @Test
     public void testIncreasingDominators() {
         int[] input = { 1, 3, 4, 2, 1, 7, 5, 3, 4, 0, 4, 6, 7, 10, 4, 3, 2, 1 };
         List<Integer> result = Arrays.asList(1, 3, 4, 7, 10);
-        checkCollector("increasing", result, () -> IntStreamEx.of(input).boxed(), MoreCollectors.dominators((a, b) -> a >= b));
+        checkCollector("increasing", result, () -> IntStreamEx.of(input).boxed(), MoreCollectors
+                .dominators((a, b) -> a >= b));
         int[] longInput = new Random(1).ints(10000, 0, 1000000).toArray();
         List<Integer> longResult = new ArrayList<>();
         int curMax = -1;
-        for(int val : longInput) {
-            if(val > curMax) {
+        for (int val : longInput) {
+            if (val > curMax) {
                 curMax = val;
                 longResult.add(curMax);
             }
         }
-        checkCollector("increasingLong", longResult, () -> IntStreamEx.of(longInput).boxed(),
-            MoreCollectors.dominators((a, b) -> a >= b));
+        checkCollector("increasingLong", longResult, () -> IntStreamEx.of(longInput).boxed(), MoreCollectors
+                .dominators((a, b) -> a >= b));
     }
 }
